@@ -1,3 +1,8 @@
+Major changes in 3.26.3:
+* Fix time in tooltip text (Michael Catanzaro)
+* Fix timezones (Michael Catanzaro)
+* Updated translations for many languages.
+
 Major changes in 3.26.2:
 * Fixed many Flatpak issues (Mathieu Bridon)
 * Updated translations for many languages.
